Fix header font-weight on mobile

--- a/compass/sass/partials/_base.sass
+++ b/compass/sass/partials/_base.sass
@@ -31,7 +31,7 @@ $logo-font-family: "lobster-1", "lobster-2", sans-serif
 
 $header-font-size:      1.5em
 $header-line-height:    1
-$header-font-weight:    300
+$header-font-weight:    inherit
 
 $subheader-font-size:   1.25em
 
