--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -829,7 +829,7 @@ h1 a:hover {
 
 h2 {
   font-size: 1.5em;
-  font-weight: 300;
+  font-weight: inherit;
   line-height: 1;
   margin-bottom: 1em;
 }
